learn#6 Dynamic component with props

--- a/src/component/YoutubeComp/YoutubeComp.css
+++ b/src/component/YoutubeComp/YoutubeComp.css
@@ -1,12 +1,9 @@
-.text-div {
-    color: aqua;
-}
-
 .youtube-wrapper {
     display: inline-block;
     width: 210px;
     box-sizing: border-box;
     margin-right: 12px;
+    background-color: rgb(230, 230, 230);
 }
 
 .img-thumb {
