--- a/src/container/Product/Product.css
+++ b/src/container/Product/Product.css
@@ -23,7 +23,7 @@
 }
 
 .count {
-    background: #2d3c8d;
+    background: #00A2C6;
     padding: 10px;
     border-radius: 50%;
     min-width: 10px;
@@ -72,7 +72,7 @@
     color: white;
     height: 45px;
     width: 45px;
-    background: rgb(0, 0, 145);
+    background: rgb(0, 162, 198);
     border-radius: 5px;
     border: 0;
     margin: 2px 6px;
